src/mailer/snapshots/loco_rs__mailer__email_sender__tests__can_send_multi_email_with_multiple_to_recipients.snap
---
source: src/mailer/email_sender.rs
expression: stub.messages()
---
[
    (
        Envelope {
            forward_path: [
                Address {
                    serialized: "user1@framework.com",
                    at_start: 5,
                },
                Address {
                    serialized: "user2@framework.com",
                    at_start: 5,
                },
            ],
            reverse_path: Some(
                Address {
                    serialized: "test@framework.com",
                    at_start: 4,
                },
            ),
        },
        "From: test@framework.com\r\nTo: user1@framework.com, user2@framework.com\r\nSubject: Multi-To\r\nMIME-Version: 1.0\r\nDate: DATE\r\nContent-Type: multipart/alternative;\r\n boundary=\"IDENTIFIER\"\r\n\r\n--IDENTIFIER\r\nContent-Type: text/plain; charset=utf-8\r\nContent-Transfer-Encoding: 7bit\r\n\r\nHello\r\n--IDENTIFIER\r\nContent-Type: text/html; charset=utf-8\r\nContent-Transfer-Encoding: 7bit\r\n\r\n<html><body>Hello</body></html>\r\n--IDENTIFIER--\r\n",
    ),
]
